--- a/demo.css
+++ b/demo.css
@@ -16,9 +16,7 @@
 	.header{
 		
 		width: 100%;
-		margin : 0;
-		margin-top: 0;
-		padding-top: 0;
+		
 	}
 
 	.leftSideInMain{
@@ -748,3 +746,8 @@
 		height: 40px;
 		color: white;
 	}
+	.bigDivInTheMiddel{
+		width: 100%;
+	}
+
+	
