--- a/demo.css
+++ b/demo.css
@@ -85,6 +85,7 @@
 	.bodyWithComercial{
 		text-align: center;
 		background-color: white;
+		width: 100%;
 	}
 	.storeInStore{
 		text-align: center;
@@ -113,6 +114,8 @@
 		color : white;
 		text-align: center;
 		margin-bottom: 10px;
+		width: 23px;
+		height: 9.5px;
 		
 	}
 	.headerRight{
@@ -122,6 +125,8 @@
 		float: left;
 		color : white;
 		margin-top: 15px;
+		width: 100%;
+
 	}
 	.headerImg{
 		float: left;
@@ -365,6 +370,7 @@
 	.bigDivInTheMiddel {		
 		background-color:white ;
 		float: left;
+		width: 1280px;
 	}
 	.header{
 		
@@ -438,6 +444,7 @@
 	}
 
 	.bodyWithComercial{
+		width: 100%
 		text-align: center;
 		background-color: white;
 	}
@@ -652,8 +659,9 @@
 
 
 	.storeInStoreProperties{
-		float: left;
+		width: 100%;
 		background-color: white;
+		
 	}
 	
 	.storeInStoreProperties {
@@ -673,6 +681,7 @@
 	.feedbackProperties{
 		float: left;
 		background-color: white;
+		width:100%;
 	}
 	
 	.feedbackProperties {
@@ -747,5 +756,8 @@
 		float: right;
 		color: white;
 	}
-
+	.headerLeft{
+		width: 100%;
+		height: 16.5px;
+	}
 	
