update_toi_10_2_2020(da responsive + 1 slider)

--- a/cssWithProperties.css
+++ b/cssWithProperties.css
@@ -295,6 +295,10 @@
 		
 		margin-top: 20px;
 	}
+	.shopbycategoriesproperties img{
+		width: 305px;
+		height: 307px;
+	}
 	.shopbycategoriesdescription{
 		clear: both;
 		text-align: center;
