--- a/cssWithProperties.css
+++ b/cssWithProperties.css
@@ -3,7 +3,7 @@
 	width: 100%;
 	margin : auto;
 	padding : unset;
-	
+
 }
 .header{
 	background-color: white;
@@ -46,348 +46,373 @@
 	color: white;
 	padding-left: 30px;
 	float: left;
-	}
-	.shockingcomercialright{
-		float: right;
-		text-align: right;
-		padding-right: 30px;
-	}
+}
+.shockingcomercialright{
+	float: right;
+	text-align: right;
+	padding-right: 30px;
+}
 
-	#SearchInput{
-		float: left;
-		width: 332px;
-		height: 41px;
-		margin-top: 35px;
-		border : 1px solid black;
+#SearchInput{
+	float: left;
+	width: 332px;
+	height: 41px;
+	margin-top: 35px;
+	border : 1px solid black;
 
-	}
-	.LogoImage{
-		margin-left: 46px;
-	}
-	.searcharea{
-		width: 93%;
-		margin:auto;
-	}
+}
+.LogoImage{
+	margin-left: 46px;
+}
+.searcharea{
+	width: 93%;
+	margin:auto;
+}
 
-	.contactArea{
-		float: right;
-		text-align: right;
-		margin:50px;
-	}
-	.searchareainput input[type=text] {
-		float: left;
-		padding: 5px;
-		margin-top: 35px;
-		border: 1px solid black;
-		font-size: 20px;
-		width: 60%;
-	}
+.contactArea{
+	float: right;
+	text-align: right;
+	margin:50px;
+}
+.searchareainput input[type=text] {
+	float: left;
+	padding: 5px;
+	margin-top: 35px;
+	border: 1px solid black;
+	font-size: 20px;
+	width: 60%;
+}
 
-	.searchareainput button{
-		font-size: 25px;
-		float: left;
-		background-color: black;
-		width: 55px;
-		margin-top: 34px;
-	}
-	.contactinsearch{
-		clear: both;
-		align-self: center;
-	}
-	.searchareaproperties{
-		float: left;
-	}
-	.productnavigator{
-		width :100%;
-	}
-	.navigatorproperties li {
-		float: left;
-		margin-bottom: 20px;
-		height: 100%;
+.searchareainput button{
+	font-size: 25px;
+	float: left;
+	background-color: black;
+	width: 55px;
+	margin-top: 34px;
+}
+.contactinsearch{
+	clear: both;
+	align-self: center;
+	text-align: right;
+}
+.searchareaproperties{
+	float: left;
+}
+.productnavigator{
+	width :100%;
+}
+.navigatorproperties li {
+	float: left;
+	margin-bottom: 20px;
+	height: 100%;
 
-	}
-	.navigatorproperties li a {
-		display: block;
-		color: black;
-		text-align: center;
-		text-decoration: none;
-		align-items: center;
-	}
-	.navigatorproperties{
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		background-color: white;
-	}
-	.body{
-		width: 91%;
-		margin:auto;
-		
-	}
-	.slider img{
-		width: 100%;
-		margin:auto;
-		
+}
+.navigatorproperties li a {
+	display: block;
+	color: black;
+	text-align: center;
+	text-decoration: none;
+	align-items: center;
+}
+.navigatorproperties{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: white;
+}
+.body{
+	width: 91%;
+	margin:auto;
 
-	}
-	.certificate{
-		width: 100%;
-		margin:auto;
-		
-	}
+}
+.slider img{
+	width: 100%;
+	margin:auto;
 
-	.certificateproperties li {
-		float: left;
-		text-align: center;
-		margin-bottom: 20px;
-	}
-	.certificateproperties li a {
-		display: block;
-		text-align: center;
-		text-decoration: none;
-		
-	}
-	.certificateproperties li img{
-		width: 151px;
-		height: 110px;
-	}
 
-	.certificateproperties{
-		list-style-type: none;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		background-color: white;
-	}
-	.subnavigator{
-		width: 100%;
-		height: 57px;
-		clear: both;
-		margin-top: 25px;
-		background-color: black;
-	}
-	.subnavigatorleft{
-		float: left;
-	}
-	
-	.subnavigatorleftproperties{
-		color: white;
-		margin-top: 19.5px;
-	}
-	.subnavigatorleftproperties a{
-		color: white;
-	}
-	
-	.subnavigatorright li {
-		float: left;
-		height: 100%;
-		display: block;
-		margin-top: 20px;
+}
+.certificate{
+	width: 100%;
+	margin:auto;
 
-	}
-	.subnavigatorright li a {
-		
-		text-align: center;
-		text-decoration: none;
-		align-items: center;
-		color: white;
-	}
-	.subnavigatorright{
-		color: white;
-		margin: 0;
-		padding: 0;
-		overflow: hidden;
-		background-color: black;
-	}
-	
-	
-	.producthot{
-		width: 100%;
-		clear: both;
-		
-	}
-	.productlist{
-		width: 100%;
-	}
-	.productlistproperties{
-		float: left;
-	}
-	.addtocartbutton{
-		color: white;
-		clear: both;
-		width: 100%;
-		background-color: red;
-		height: 40px;
-		
-	}
-	.productimghot{
-		width: 278px;
-		height: 278px;
-	}
-	.viewmorelink{
-		text-align: right;
-		width: 100%;
-		float: right;
-		clear: both;
-		margin-bottom: 20px;
-	}
-	.manualSales{
-		width: 100%;
-		margin-left: 15px;
-	}
-	.bodywithcomercial{
-		width: 100%;
-	}
-	.bodywithcomercial_leftside{
-		float: left;
-		margin-top: 50px;
-		text-align: center;
-		padding : unset;
-	}
-	.bodywithcomercialtitle{
-		margin:auto;
-	}
-	.bodywithcomercial_rightside{
-		float: right;
-		width: 20%;
-		margin-top: 50px;
-	}
-	.bodywithcomercial_rightside img{
-		width: 100%;
-		
-	}
-	.onsalewithtimecountdown{
-		width: 100%;
-		clear: both;
-	}
-	.onsaleimg{
-		width: 100%;
-		float: left;
-		
-	}
-	.onsalewithtimecountdown div{
-		text-align: left;
-	}
-	.onsaledescription{
-		clear: both;
-	}
-	.onsaledescription img{
-		clear: both;
-		float: left;
-		
-		height: 25px;
-	}
-	.viewmorelink2{
-		text-align: right;
-		width: 100%;
-		float: right;
-		clear: both;
-		margin-bottom: 20px;
-	}
-	.shopbycategoriestitle{
-		text-align: center;
-	}
-	.shopbycategoriestitle img{
-		
-	}
-	.shopbycategoriesproperties{
-		display: flex;
-		margin-top: 20px;
-	}
-	.shopbycategoriesproperties img{
-		width: 305px;
-		height: 307px;
-	}
-	.shopbycategoriesdescription{
-		clear: both;
-		text-align: center;
-		margin-top: 10px;
-	}
-	.storeinstore{
-		clear: both;
-		width: 100%;
+}
 
-	}
-	.storeinstoretitle{
-		margin:auto;
-		text-align: center;
-	}
-	.storeinstorebody{
-		clear: both;
-	}
-	.storeinstorebody div{
-		float: left;
-		margin-bottom: 30px;
-		padding-left: 20px;
-	}
+.certificateproperties li {
+	float: left;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.certificateproperties li a {
+	display: block;
+	text-align: center;
+	text-decoration: none;
 
-	.feedback{
-		clear: both;
-		
-	}
-	.feedbacktitle{
-		margin-top: 40px;
-		text-align: center;
+}
+.certificateproperties li img{
+	width: 151px;
+	height: 110px;
+}
 
-	}
-	.feedbacktitle img{
-		margin: auto;
-	}
-	.feedbacktitle h1{
-		margin:auto;
-	}
-	.feedbackbody{
-		clear: both;
-	}
-	.FeedBackBody div{
-		float: left;
-	}
-	.feedbackimg {
-		width: 223px;
-		height: 284px;
-	}
-	
-	.feature{
-		clear: both;
-		width: 100%;
-	}
-	.featuretitle{
-		margin-left: 55px;
-	}
-	.featuretitleimg{
-		margin-left: 55px;
-	}
-	.footer{
-		width: 93%;
-		margin-top: 70px;
-		margin:auto;
-		margin-bottom: 30px;
-	}
-	.footerright{
-		float: right;
-		text-align: left;
-	}
-	.footerleft{
-		float: left;
-		padding-left: 50px;
-	}
-	.footerright input{
-		width: 479px;
-		height: 58px;
-	}
-	.footerright button{
-		width: 99px;
-		height: 58px;
-		background-color: black;
-		color: white;
-		margin-left: 0px;
-	}
-	.searchareainput{
-		float: left;
-	}
+.certificateproperties{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: white;
+}
+.subnavigator{
+	width: 100%;
+	height: 57px;
+	clear: both;
+	margin-top: 25px;
+	background-color: black;
+}
+.subnavigatorleft{
+	float: left;
+}
 
-	.featureimg{
-		width: 144px;
-		height :126px;
-	}
+.subnavigatorleftproperties{
+	color: white;
+	margin-top: 19.5px;
+}
+.subnavigatorleftproperties a{
+	color: white;
+}
+
+.subnavigatorright li {
+	float: left;
+	height: 100%;
+	display: block;
+	margin-top: 20px;
+
+}
+.subnavigatorright li a {
+
+	text-align: center;
+	text-decoration: none;
+	align-items: center;
+	color: white;
+}
+.subnavigatorright{
+	color: white;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: black;
+}
+
+
+.producthot{
+	width: 100%;
+	clear: both;
+
+}
+.productlist{
+	width: 100%;
+}
+.productlistproperties{
+	float: left;
+}
+.addtocartbutton{
+	color: white;
+	clear: both;
+	width: 100%;
+	background-color: red;
+	height: 40px;
+
+}
+.productimghot{
+	width: 278px;
+	height: 278px;
+}
+.viewmorelink{
+	text-align: right;
+	width: 100%;
+	float: right;
+	clear: both;
+	margin-bottom: 20px;
+}
+.manualSales{
+	width: 100%;
+	margin-left: 15px;
+}
+.bodywithcomercial{
+	width: 100%;
+}
+.bodywithcomercial_leftside{
+	float: left;
+	margin-top: 50px;
+	text-align: center;
+	padding : unset;
+}
+.bodywithcomercialtitle{
+	margin:auto;
+}
+.bodywithcomercial_rightside{
+	float: right;
+	width: 20%;
+	margin-top: 50px;
+}
+.bodywithcomercial_rightside img{
+	width: 100%;
+
+}
+.onsalewithtimecountdown{
+	width: 100%;
+	clear: both;
+}
+.onsaleimg{
+	width: 100%;
+	float: left;
+
+}
+.onsalewithtimecountdown div{
+	text-align: left;
+}
+.onsaledescription{
+	clear: both;
+}
+.onsaledescription img{
+	clear: both;
+	float: left;
+
+	height: 25px;
+}
+.viewmorelink2{
+	text-align: right;
+	width: 100%;
+	float: right;
+	clear: both;
+	margin-bottom: 20px;
+}
+.shopbycategoriestitle{
+	text-align: center;
+}
+.shopbycategoriestitle img{
+
+}
+.shopbycategoriesproperties{
+	display: flex;
+	margin-top: 20px;
+}
+.shopbycategoriesproperties img{
+	width: 305px;
+	height: 307px;
+}
+.shopbycategoriesdescription{
+	clear: both;
+	text-align: center;
+	margin-top: 10px;
+}
+.storeinstore{
+	clear: both;
+	width: 100%;
+
+}
+.storeinstoretitle{
+	margin:auto;
+	text-align: center;
+	margin-bottom: 20px;
+}
+.storeinstorebody{
+	clear: both;
+	width: 100%;
+}
+.storeinstorebody div{
+	float: left;
+	margin-bottom: 30px;
+	padding-left: 20px;
+}
+
+.feedback{
+	clear: both;
+
+}
+.feedbacktitle{
+	margin-top: 40px;
+	text-align: center;
+
+}
+.feedbacktitle img{
+	margin: auto;
+}
+.feedbacktitle h1{
+	margin:auto;
+}
+.feedbackbody{
+	clear: both;
+}
+.FeedBackBody div{
+	float: left;
+}
+.feedbackimg {
+	width: 223px;
+	height: 284px;
+}
+
+.feature{
+	clear: both;
+	width: 100%;
+}
+.featuretitle{
+	margin-left: 55px;
+}
+.featuretitleimg{
+	margin-left: 55px;
+}
+.footer{
+	width: 93%;
+	margin-top: 70px;
+	margin:auto;
+	margin-bottom: 30px;
+}
+.footerright{
+	float: right;
+	text-align: left;
+}
+.footerleft{
+	float: left;
+	padding-left: 50px;
+}
+.footerright input{
+	width: 479px;
+	height: 58px;
+}
+.footerright button{
+	width: 99px;
+	height: 58px;
+	background-color: black;
+	color: white;
+	margin-left: 0px;
+}
+.searchareainput{
+	float: left;
+}
+
+.featureimg{
+	width: 144px;
+	height :126px;
+}
+
+/* Type-1 carousel feature*/
+.multifeature {
+  .carousel-inner .active.left {
+    left: -25%;
+  }
+  .carousel-inner .next {
+    left:  25%;
+  }
+  .carousel-inner .prev {
+    left: -25%;
+  }
+  .carousel-control {
+    width:  4%;
+  }
+  .carousel-control.left, .carousel-control.right {
+    margin-left:15px;
+    background-image:none;
+  }
+  .leftcarousel-control{
+  	width: 0;
+  }
