--- a/hornyPhone.css
+++ b/hornyPhone.css
@@ -12,10 +12,36 @@
 }
 .bignavigator{
 	width: 100%;
-	background-color: black;
+	background-color: white;
 	padding-top: 15px;
 	margin-bottom: unset;
 }
 .bignavigator div{
 	float: left;
+}
+.dropdown{
+	background-color: white;
+}
+.buttonsheader{
+	background-color: white;
+	border : none;
+	font-size: 30px;
+	margin-top: 31px;
+}
+.bignavigatorright{
+	text-align: right;
+}
+.searchbar input{
+	width: 80%;
+	margin-top: 20px;
+	font-size: 20px;
+	float: left;
+	border : 1px solid black;
+}
+.searchbar button{
+	float: right;
+	width: 20%;
+	font-size: 22px;
+	margin-top: 19px;
+	background-color: black;
 }
