--- a/cssWithProperties.css
+++ b/cssWithProperties.css
@@ -224,7 +224,7 @@
 
 }
 .productimghot{
-	width: 278px;
+	width: 100%;
 	height: 278px;
 }
 .viewmorelink{
@@ -402,6 +402,8 @@
 	background-color: white;
 	align-content: center;
 	margin:auto;
+	width: 100%;
+	padding:unset;
 
 }
 .bignavigatorphone{
@@ -536,5 +538,5 @@
 	float: right;
 }
 .categoriespropertiescenter b{
-	align-self: center;
+	margin-left: 30px;
 }
