--- a/cssWithProperties.css
+++ b/cssWithProperties.css
@@ -540,3 +540,65 @@
 .categoriespropertiescenter b{
 	margin-left: 30px;
 }
+
+.bodyphone2main{
+	text-align: left;
+	border-bottom: 1px solid blue;
+	margin-left: 20px;
+	margin-right: 20px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.body2phone a{
+	color: black;
+}
+.dropdown{
+	width: 10%;
+	float: right;
+}
+.body2phone{
+	margin-top: 20px;
+}
+.footertitle{
+	width: 100%;
+	text-align: center;
+	align-items: center;
+	margin:20px;
+}
+.footertitle img {
+	margin:auto;
+	margin-top: 20px;
+}
+.inputarea input{
+	width: 246px;
+	height: 43px;
+	color: white;
+	margin-left: 0px;
+	margin-left: 50px;
+	border:1px solid black;
+	float: left;
+}
+.inputarea button{
+	width: 89px;
+	height: 43px;
+	color: white;
+	background-color: black;
+	float: left;
+	margin-right: 20px;
+}
+.footerimg{
+	margin : auto;
+	clear: both;
+	text-align: center;
+
+}
+.footerimg img {
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+.footericontitle{
+	clear: both;
+	text-align: center;
+	padding-top: 20px;
+}
+
